--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
     "yup": "^1.3.2"
