--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
