--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^5.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
@@ -24,11 +26,13 @@
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
+    "swiper": "^11.0.4",
     "yup": "^1.3.2",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
