--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.7",
