--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_BASE_URL=http://localhost:8001
+VITE_BASE_URL_USER=http://localhost:7100
 VITE_BASE_URL_FACILITY=http://localhost:7200
 VITE_BASE_URL_BOOKING=http://localhost:7300
