--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_BASE_URL=http://localhost:8001
 VITE_BASE_URL_USER=http://localhost:7100
 VITE_BASE_URL_FACILITY=http://localhost:7200
 VITE_BASE_URL_BOOKING=http://localhost:7300
+VITE_BASE_URL_NOTIFICATION=http://localhost:7400
+VITE_BASE_URL_WS=ws://localhost:7400
