--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ VITE_BASE_URL_FACILITY=http://localhost:7200
 VITE_BASE_URL_BOOKING=http://localhost:7300
 VITE_BASE_URL_NOTIFICATION=http://localhost:7400
 VITE_BASE_URL_WS=ws://localhost:7400
+
+VITE_CLOUDINARY_CLOUD_NAME=dl3jtknft
+VITE_CLOUDINARY_API_KEY=449257119723133
+VITE_CLOUDINARY_API_SECRET=ub8ubTK1PoUMiheO_3hxdudfOYw
+VITE_CLOUDINARY_UPLOAD_PRESET=uade1r7x
+VITE_CLOUDINARY_FOLDER=football-booking
