--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.14.0",
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cloudinary-react": "^1.8.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
