--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.14.0",
     "@hookform/resolvers": "^3.3.2",
+    "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cloudinary-react": "^1.8.1",
