--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.14.0",
     "@hookform/resolvers": "^3.3.2",
     "@paypal/react-paypal-js": "^8.1.3",
+    "@types/react-big-calendar": "^1.8.8",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cloudinary-react": "^1.8.1",
@@ -22,6 +23,7 @@
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.7",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
